1. Modified scoreboard and coverage to remove read strb coverage (don't need this). 2. Modified constraint to generate some out-of-bound address for SLVERR response testing.

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -57,6 +57,7 @@ VFLAGS += -Wno-CASEINCOMPLETE
 VFLAGS += -Wno-LATCH
 VFLAGS += -Wno-INITIALDLY
 VFLAGS += -Wno-MULTIDRIVEN
+VFLAGS += -Wno-TIMESCALEMOD
 
 # -----------------------------------------------------------------------------
 # Source files — strict compilation order:
